--- a/home/templates/home/view_stats.html
+++ b/home/templates/home/view_stats.html
@@ -68,125 +68,7 @@
       <!-- Divider -->
       <hr class="sidebar-divider my-0">
 
-      <!-- Heading -->
-      <!-- <div class="sidebar-heading">
-        Update
-      </div> -->
-<!--
-    
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-          <i class="fas fa-fw fa-cog"></i>
-          <span>Add users</span>
-        </a>
-        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <!-- <h6 class="collapse-header">Custom Components:</h6> 
-            <a class="collapse-item" href="{% url 'add_dept' %}">Add department</a>
-            <a class="collapse-item" href="{% url 'add_sh' %}">Add Stakeholders</a>
-          </div>
-        </div>
-      </li>
 
-      <hr class="sidebar-divider my-0">
-
-      <!-- Nav Item - Utilities Collapse Menu 
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
-          <i class="fas fa-fw fa-wrench"></i>
-          <span>Monitoring meeting</span>
-        </a>
-        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <!-- <h6 class="collapse-header">Custom Utilities:</h6> 
-            <div><a class="collapse-item" href="{% url 'add_monitory_meeting' %}" >Add</a></div>
-            <div><a class="collapse-item" href="{% url 'view_upcoming_meetings_action' %}">Upcoming Meetings</a></div>
-            <a class="collapse-item" href="{% url 'view_prev_meeting' %}">Previous Meetings</a>
-            <a class="collapse-item" href="{% url 'auto_monthly_minute' %}">View generated minute</a>
-
-          </div>
-        </div>
-      </li>
-
-      <!-- Divider 
-      <hr class="sidebar-divider my-0">
-
-      <!-- Heading -->
-      <!-- <div class="sidebar-heading">
-        Review
-      </div> -->
-
-      <!-- Nav Item - Pages Collapse Menu 
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages0" aria-expanded="true" aria-controls="collapsePages">
-          <i class="fas fa-fw fa-folder"></i>
-          <span>Meetings</span>
-        </a>
-        <div id="collapsePages0" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <!-- <h6 class="collapse-header">Login Screens:</h6> 
-            <a class="collapse-item" href="{% url 'add_meeting' %}">Plan a meeting </a>
-            <a class="collapse-item" href="{% url 'view_upcoming_normalmeetings' %}">Upcoming Meetings</a>
-            <a class="collapse-item" href="{% url 'view_prev_normalmeeting' %}">Previous Meetings</a>
-          </div>
-        </div>
-      </li>
-
-      <hr class="sidebar-divider my-0">
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages1" aria-expanded="true" aria-controls="collapsePages">
-          <i class="fas fa-fw fa-folder"></i>
-          <span>Status Report</span>
-        </a>
-        <div id="collapsePages1" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <!-- <h6 class="collapse-header">Login Screens:</h6> 
-            <a class="collapse-item" href="{% url 'add_status_report' %}"><i class="fa fa-asterisk fa-fw"></i>Add Status report</a>
-            <a class="collapse-item" href="{% url 'view_status_report' %}"><i class="fa fa-asterisk fa-fw"></i>View Status report</a>
-          </div>
-        </div>
-      </li>
-
-      <hr class="sidebar-divider my-0">
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages2" aria-expanded="true" aria-controls="collapsePages">
-          <i class="fas fa-fw fa-folder"></i>
-          <span>Notifications</span>
-        </a>
-        <div id="collapsePages2" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <!-- <h6 class="collapse-header">Login Screens:</h6> 
-            <a class="collapse-item" href="{% url 'notify' %}">Notify</a>
-            <a class="collapse-item" href="{% url 'view_notification' %}">View Notifications</a>
-          </div>
-        </div>
-      </li>
-      <hr class="sidebar-divider my-0">
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages3" aria-expanded="true" aria-controls="collapsePages">
-          <i class="fas fa-fw fa-folder"></i>
-          <span>Target and Progress</span>
-        </a>
-        <div id="collapsePages3" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-          <div class="bg-white py-2 collapse-inner rounded">
-            <!-- <h6 class="collapse-header">Login Screens:</h6> 
-            <a class="collapse-item" href="{% url 'add_target' %}">Add Target</a>
-            <a class="collapse-item" href="{% url 'view_past_target' %}">View Past Targets</a>
-            <a class="collapse-item" href="{% url 'view_current_target' %}">View Current Targets</a>
-            <div class="collapse-divider"></div>
-          </div>
-        </div>
-      </li>
-
-      <hr class="sidebar-divider my-0">
-    -->
-
-
-      <!-- <div class="sidebar-heading">
-        Analysis
-      </div> -->
 
 
       <li class="nav-item">
@@ -214,12 +96,12 @@
         </a>
         <div id="collapsePages4" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <!-- <h6 class="collapse-header">Login Screens:</h6> 
+             <h6 class="collapse-header">Login Screens:</h6> 
             <a class="collapse-item" href="{% url 'view_target_analysis' %}">Target wise</a>
             <a class="collapse-item" href="{% url 'view_achievement_analysis' %}">Achievement/Delay wise</a>
             <a class="collapse-item" href="{% url 'view_feedback_analysis' %}">Feedback wise</a>
             <div class="collapse-divider"></div>
-            <!-- <h6 class="collapse-header">Other Pages:</h6> 
+             <h6 class="collapse-header">Other Pages:</h6> 
             <a class="collapse-item" href="{% url 'view_ap_analysis' %}">ActionPoint wise</a>
             <a class="collapse-item" href="{% url 'view_comparision_analysis' %}">Comaprision</a>
           </div>
@@ -293,124 +175,7 @@
 
 
 
-              <!-- <div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in" aria-labelledby="searchDropdown">
-                <div class="input-group custom-search-form">
-
-                                        <div id="google_translate_element"></div>
-                
-                </div>
-              </div> -->
-            </li>
-            <!-- Removed download action points from here 
-            <div class="nav-item mx-1">
-              <a class="nav-link" href="{% url 'download_ap' %}" target="_blank"><span class="text-primary">Download Action Points</span></a>
-            </div>
-          -->
-            <!-- Nav Item - Alerts -->
-            <li class="nav-item dropdown no-arrow mx-1">
-              <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-bell fa-fw"></i>
-                <!-- Counter - Alerts -->
-                <span class="badge badge-danger badge-counter">3+</span>
-              </a>
-              <!-- Dropdown - Alerts -->
-              <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
-                <h6 class="dropdown-header">
-                  Alerts Center
-                </h6>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                  <div class="mr-3">
-                    <div class="icon-circle bg-primary">
-                      <i class="fas fa-file-alt text-white"></i>
-                    </div>
-                  </div>
-                  <div>
-                    <div class="small text-gray-500">December 12, 2019</div>
-                    <span class="font-weight-bold">A new monthly report is ready to download!</span>
-                  </div>
-                </a>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                  <div class="mr-3">
-                    <div class="icon-circle bg-success">
-                      <i class="fas fa-donate text-white"></i>
-                    </div>
-                  </div>
-                  <div>
-                    <div class="small text-gray-500">December 7, 2019</div>
-                    $290.29 has been deposited into your account!
-                  </div>
-                </a>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                  <div class="mr-3">
-                    <div class="icon-circle bg-warning">
-                      <i class="fas fa-exclamation-triangle text-white"></i>
-                    </div>
-                  </div>
-                  <div>
-                    <div class="small text-gray-500">December 2, 2019</div>
-                    Spending Alert: We've noticed unusually high spending for your account.
-                  </div>
-                </a>
-                <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
-              </div>
-            </li>
-
-            <!-- Nav Item - Messages -->
-            <li class="nav-item dropdown no-arrow mx-1">
-              <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-envelope fa-fw"></i>
-                <!-- Counter - Messages -->
-                <span class="badge badge-danger badge-counter">7</span>
-              </a>
-              <!-- Dropdown - Messages -->
-              <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="messagesDropdown">
-                <h6 class="dropdown-header">
-                  Message Center
-                </h6>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                  <div class="dropdown-list-image mr-3">
-                    <img class="rounded-circle" src="https://source.unsplash.com/fn_BT9fwg_E/60x60" alt="">
-                    <div class="status-indicator bg-success"></div>
-                  </div>
-                  <div class="font-weight-bold">
-                    <div class="text-truncate">Hi there! I am wondering if you can help me with a problem I've been having.</div>
-                    <div class="small text-gray-500">Emily Fowler · 58m</div>
-                  </div>
-                </a>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                  <div class="dropdown-list-image mr-3">
-                    <img class="rounded-circle" src="https://source.unsplash.com/AU4VPcFN4LE/60x60" alt="">
-                    <div class="status-indicator"></div>
-                  </div>
-                  <div>
-                    <div class="text-truncate">I have the photos that you ordered last month, how would you like them sent to you?</div>
-                    <div class="small text-gray-500">Jae Chun · 1d</div>
-                  </div>
-                </a>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                  <div class="dropdown-list-image mr-3">
-                    <img class="rounded-circle" src="https://source.unsplash.com/CS2uCrpNzJY/60x60" alt="">
-                    <div class="status-indicator bg-warning"></div>
-                  </div>
-                  <div>
-                    <div class="text-truncate">Last month's report looks great, I am very happy with the progress so far, keep up the good work!</div>
-                    <div class="small text-gray-500">Morgan Alvarez · 2d</div>
-                  </div>
-                </a>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                  <div class="dropdown-list-image mr-3">
-                    <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60" alt="">
-                    <div class="status-indicator bg-success"></div>
-                  </div>
-                  <div>
-                    <div class="text-truncate">Am I a good boy? The reason I ask is because someone told me that people say this to all dogs, even if they aren't good...</div>
-                    <div class="small text-gray-500">Chicken the Dog · 2w</div>
-                  </div>
-                </a>
-                <a class="dropdown-item text-center small text-gray-500" href="#">Read More Messages</a>
-              </div>
-            </li>
-
+              
             <div class="topbar-divider d-none d-sm-block"></div>
 
             <!-- Nav Item - User Information -->
@@ -436,18 +201,18 @@
         <!-- End of Topbar -->
 
         <!-- Begin Page Content -->
-        <div class="container-fluid">
+        
 
 
           <!-- main content  -->
-                    <div id="page-wrapper">
-                    <div class="container-fluid ">
+                    
+                
                     
                       <script type="text/javascript" src="{% static 'dept/fusioncharts/js/fusioncharts.js' %}"></script>
                       <script type="text/javascript" src="{% static 'dept/fusioncharts/js/themes/fusioncharts.theme.fusion.js' %}"></script>
                     
-
-                    <div class="row">      
+                      <div class="container-fluid">
+                    <div class="row d-flex justify-content-center">      
                         
                     <div class="col-sm-6">
                       <div class="text-center">
@@ -464,6 +229,7 @@
                         </div>
                     </div>
                     </div>
+                  </div>
                     <div class="row">      
                         
                         <div class="col-sm-6">
@@ -474,11 +240,10 @@
                           </div>
                         </div>
                         </div>
-                    </div>
-                <!-- end main content-->
-      
-            </div>
-            <
+                        </div>
+                        </div>
+                        
+            
   <!-- Bootstrap core JavaScript-->
   <script src="{% static 'dipp/vendor/jquery/jquery.min.js' %}"></script>
   <script src="{% static 'dipp/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
