--- a/dept/templates/dept/home.html
+++ b/dept/templates/dept/home.html
@@ -9,84 +9,73 @@
         <div class="row">
               <!--collapse for action points-->
 
-          <div class="container">
-            <div class="row d-flex ">
-
-                <div class="col-lg-8">
-
-                        <div class="d-flex justify-content-center">
-                                <h1 class="page-header">Action Points</h1>
-                            </div>
-            <br>
-
-          {% for m,val,j,k in main %}
-          
-          <div id="accordion" class="rah">
-            <div class="card">
-              <div class="card-header">
-            <h5>
-                    {{val.action_no}}.
-                    <a data-toggle="collapse" data-parent="#accordion" href="{{j}}">
-                   {{val.action_name}}</a>
-                </h5>
-              </div>
-              <div id="{{k}}" class="panel-collapse collapse">
-                <div class="panel-body">
-
-                  <h4>Objective:</h4>
-                  <label >{{val.action_objective}}</label>
-                  <h4>Description:</h4>
-                  <label >{{val.action_description}}     </label>
-
-                  <div class="row">
-                      <div class="col-lg-12">
-                          <div class="panel panel-default">
-                              <div class="panel-heading">
-                                   Targets assigned and achieved for this action point
-                              </div>
-                              <!-- /.panel-heading -->
-                              <div class="panel-body">
-                                  <div class="table-responsive">
-                                      <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                          <thead>
-                                              <tr>
-                                                <th>Department</th>
-                                                <th>Target Assigned</th>
-                                                <th>Target fulfilled</th>
-                                                <th>Achievements</th>
-                                                <th>Dealy</th>
-                                              </tr>
-                                          </thead>
-                                          <tbody>
-                                            {% for i in m %}
-                                              <tr class="odd gradeX">
-                                                    <td>{{i.0}}</td>
-                                                    <td>{{i.1}}</td>
-                                                    <td>{{i.2}}</td>
-                                                    <td>{{i.3}}</td>
-                                                    <td>{{i.4}}</td>
-                                                  </tr>
-                                                {% endfor %}
-                                           </tbody>
-                                      </table>
-                                  </div>
-                                  </div>
-                                  </div>
-                                  </div>
-                                  </div>
-
-
-                  <label>Last Updated on {{val.update_time}}</label><br>
-                </div>
-              </div>
-              </div>
-            </div>
-
-
-     
-    {% endfor %}
+              <div class="container">
+                <div class="row d-flex ">
     
-        </div>
+                    <div class="col-lg-8">
+    
+                            <div class="d-flex justify-content-center">
+                                    <h1 class="page-header">Action Points</h1>
+                                </div>
+                <br>
+             {% for m,val,j,k in main %}
+                <div id="accordion" class="rah">
+                    <div class="card">
+                      <div class="card-header">
+                        <h5> {{val.action_no}} .  
+                          <a href="{{j}}" data-parent="#accordion" data-toggle="collapse">
+                            {{val.action_name}}
+                          </a>
+                        </h5>
+                      </div>
+              
+                      <div id="{{k}}" class="collapse">
+                        <div class="card-body">
+                            <h4>Objective:</h4>
+                            <p class="card-text">{{val.action_objective}}</p>
+                            <h4>Description:</h4>
+                            <p class="card-text" >{{val.action_description}}</p>
+                        
+                                    
+                        <p class="card-text"><h5>Targets assigned and achieved for this action point</h5></p>
+                                    
+                                    
+                                    <div class="card-body">
+                                        <div class="table-responsive">
+                                            <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                                <thead>
+                                                    <tr class="bg-gradient-primary text-white">
+                                                      <th>Department</th>
+                                                      <th>Target Assigned</th>
+                                                      <th>Target fulfilled</th>
+                                                      <th>Achievements</th>
+                                                      <th>Delay</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                  {% for i in m %}
+                                                    <tr class="odd gradeX">
+                                                          <td>{{i.0}}</td>
+                                                          <td>{{i.1}}</td>
+                                                          <td>{{i.2}}</td>
+                                                          <td>{{i.3}}</td>
+                                                          <td>{{i.4}}</td>
+                                                        </tr>
+                                                      {% endfor %}
+                                                 </tbody>
+                                            </table>
+                                        </div>
+                                        </div>
+                                        </div>
+                                        </div>
+      
+                      </div>
+                    </div>
+    
+                    {% endfor %}
+                
+                
+            </div>
 
           <!--notifications-->
           <div class="col-lg-4">
