--- a/stk_hld/templates/stk_hld/feedback_form.html
+++ b/stk_hld/templates/stk_hld/feedback_form.html
@@ -5,46 +5,47 @@
 {% block content %}
 
 <div id="page-wrapper">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <h1 class="page-header">Feedback</h1>
-                        </div>
-                        <!-- /.col-lg-12 -->
-                    </div>
-                    <!-- /.row -->
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="panel panel-default">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12">
+        <h1 class="page-header">Feedback</h1>
+      </div>
+      <!-- /.col-lg-12 -->
+    </div>
+    <!-- /.row -->
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="panel panel-default">
 
 
-                                <!-- /.panel-heading -->
-                                <div class="panel-body">
-                                    <div class="table-responsive">
-                                      <form method="post" action="{% url 'feedback_form_action' %}" >
-                                        {% csrf_token %}
-                                    {% for dept,j in m %}
+          <!-- /.panel-heading -->
+          <div class="panel-body">
+            <div class="table-responsive">
+              <form method="post" action="{% url 'feedback_form_action' %}">
+                {% csrf_token %}
+                {% for dept,j in m %}
 
-                                      <label for="dept{{j}}" class="control-label">Rate Department {{dept.dept_name}} </label>
-
-
-                                      <input id="dept{{j}}" name="dept{{j}}" class="rating rating-loading" data-min="0" data-max="5" data-step="1" required>
+                <label for="dept{{j}}" class="control-label">Rate Department {{dept.dept_name}} </label>
 
 
+                <input id="dept{{j}}" name="dept{{j}}" class="rating rating-loading" data-min="0" data-max="5"
+                  data-step="1" required>
 
-                                    {% endfor %}
-                                      <div class="">
-                                        <button type="submit" name="button" class="btn btn-primary">Submit</button>
-                                      </div>
-                                    </form>
-                                    </div>
 
-                                    </div>
-                                  </div>
-                                  </div>
-                                  </div>
-                                  </div>
-                                  </div>
+
+                {% endfor %}
+                <div class="">
+                  <button type="submit" name="button" class="btn btn-primary">Submit</button>
+                </div>
+              </form>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
