--- a/stk_hld/templates/stk_hld/home.html
+++ b/stk_hld/templates/stk_hld/home.html
@@ -3,9 +3,9 @@
 
 
 {% block content %}
-<div class="nav-item mx-1">
+<!-- <div class="nav-item mx-1">
     <a class="nav-link" href="{% url 'download_ap_dipp' %}" target="_blank"><span class="text-primary">Download Action Points</span></a>
-  </div>
+  </div> -->
 
           <br>
 
