note in ranking  and other

--- a/dept/templates/dept/show_ranking_d.html
+++ b/dept/templates/dept/show_ranking_d.html
@@ -41,6 +41,7 @@
                                              </tbody>
                                         </table>
                                     </div>
+                                    <p>Note- Rank is calculated based on Normalized score considering Achievements, Targets and Delays</p>
                                     <!-- /.table-responsive -->
                                     <!-- jQuery -->
                                     {% endblock %}
