--- a/dipp/templates/dipp/base.html
+++ b/dipp/templates/dipp/base.html
@@ -158,7 +158,7 @@
         <div id="collapsePages2" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <!-- <h6 class="collapse-header">Login Screens:</h6> -->
-            <a class="collapse-item" href="{% url 'notify' %}">Notify</a>
+            <!-- <a class="collapse-item" href="{% url 'notify' %}">Notify</a> -->
             <a class="collapse-item" href="{% url 'view_notification' %}">View Notifications</a>
           </div>
         </div>
