--- a/dipp/templates/dipp/show_ranking.html
+++ b/dipp/templates/dipp/show_ranking.html
@@ -41,6 +41,7 @@
                                              </tbody>
                                         </table>
                                     </div>
+                                    <p>Note- Rank is calculated based on Normalized score considering Achievements, Targets and Delays</p>
                                     <!-- /.table-responsive -->
                                     <!-- jQuery -->
                                     {% endblock %}
