--- a/dept/templates/dept/home.html
+++ b/dept/templates/dept/home.html
@@ -79,64 +79,42 @@
 
           <!--notifications-->
           <div class="col-lg-4">
-                  <div class="panel panel-default">
-                      <div class="panel-heading">
-                          <i class="fa fa-bell fa-fw"></i> Notifications Panel
-                      </div>
-                      <!-- /.panel-heading -->
-                      <div class="panel-body">
-                          <div class="list-group">
-                              <a href="#" class="list-group-item">
-                                  <i class="fa fa-comment fa-fw"></i> New Comment
-                                      <span class="pull-right text-muted small"><em>4 minutes ago</em>
-                                      </span>
-                              </a>
-                              <a href="#" class="list-group-item">
-                                  <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-                                      <span class="pull-right text-muted small"><em>12 minutes ago</em>
-                                      </span>
-                              </a>
-                              <a href="#" class="list-group-item">
-                                  <i class="fa fa-envelope fa-fw"></i> Message Sent
-                                      <span class="pull-right text-muted small"><em>27 minutes ago</em>
-                                      </span>
-                              </a>
-                              <a href="#" class="list-group-item">
-                                  <i class="fa fa-tasks fa-fw"></i> New Task
-                                      <span class="pull-right text-muted small"><em>43 minutes ago</em>
-                                      </span>
-                              </a>
-                              <a href="#" class="list-group-item">
-                                  <i class="fa fa-upload fa-fw"></i> Server Rebooted
-                                      <span class="pull-right text-muted small"><em>11:32 AM</em>
-                                      </span>
-                              </a>
-                              <a href="#" class="list-group-item">
-                                  <i class="fa fa-bolt fa-fw"></i> Server Crashed!
-                                      <span class="pull-right text-muted small"><em>11:13 AM</em>
-                                      </span>
-                              </a>
-                              <a href="#" class="list-group-item">
-                                  <i class="fa fa-warning fa-fw"></i> Server Not Responding
-                                      <span class="pull-right text-muted small"><em>10:57 AM</em>
-                                      </span>
-                              </a>
-                              <a href="#" class="list-group-item">
-                                  <i class="fa fa-shopping-cart fa-fw"></i> New Order Placed
-                                      <span class="pull-right text-muted small"><em>9:49 AM</em>
-                                      </span>
-                              </a>
-                              <a href="#" class="list-group-item">
-                                  <i class="fa fa-money fa-fw"></i> Payment Received
-                                      <span class="pull-right text-muted small"><em>Yesterday</em>
-                                      </span>
-                              </a>
-                          </div>
-                          <!-- /.list-group -->
-                          <a href="#" class="btn btn-default btn-block">View All Alerts</a>
-                      </div>
-                      <!-- /.panel-body -->
-                  </div>
+            <div class="card card-default">
+                <div class="card-heading">
+                    <i class="fa fa-bell fa-fw"></i> Top three Departments
+                </div>
+                <!-- /.card-heading -->
+                <div class="card-body">
+                    <div class="list-group">
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered table-hover"
+                                    id="dataTables-example">
+                                    <thead>
+                                        <tr class="bg-gradient-primary text-white">
+                                            <th>Department</th>
+                                            <th>Score</th>
+                                            
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for i,j in l %}
+                                        <tr class="odd gradeX">
+                                            <td>{{i}}</td>
+                                            <td>{{j}}</td>
+                                            
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.list-group -->
+                    <!-- <a href="#" class="btn btn-default btn-block">View All Alerts</a> -->
+                </div>
+                <!-- /.card-body -->
+            </div>
 
           <!-- end notificatioon-->
 
