--- a/dipp/templates/dipp/base.html
+++ b/dipp/templates/dipp/base.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>DPIIT - Dashboard</title>
+  <title>DIPP - Dashboard</title>
 
 
   <!-- Custom fonts for this template-->
@@ -52,7 +52,7 @@
         <div class="sidebar-brand-icon rotate-n-15">
           <i class="fas fa-cry-wink"></i>
         </div>
-        <div class="sidebar-brand-text mx-3">DPIIT</div>
+        <div class="sidebar-brand-text mx-3">DIPP</div>
       </a>
 
       <!-- Divider -->
