--- a/home/templates/home/view_stats.html
+++ b/home/templates/home/view_stats.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>DPIIT Analysis</title>
+  <title>DIPP Analysis</title>
 
 
   <!-- Custom fonts for this template-->
