--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,7 +5,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>DASHBOARD by DPIIT</title>
+	<title>DASHBOARD by DIPP</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freshdesignweb.com" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -60,7 +60,7 @@
 		<div class="ubea-container">
 			<div class="row">
 				<div class="col-sm-3 col-xs-12">
-					<div id="ubea-logo"><a href="#">DASHBOARD by <em>DPIIT</em> </a></div>
+					<div id="ubea-logo"><a href="#">DASHBOARD by <em>DIPP</em> </a></div>
 				</div>
 				<div class="col-xs-9 text-right menu-1 main-nav ">
 					<ul>
@@ -198,17 +198,17 @@
 			<div class="ubea-container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center ubea-heading">
-						<h2>DPIIT</h2>
+						<h2>DIPP</h2>
 						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 					</div>
 				</div>
 				<div align=centre>
 				<div class="row">
 					<div class="col-md-12">
-						<a href="{% static 'home/img/img_bg_10.png' %}" class="ubea-card-item image-popup" title="DPIIT">
+						<a href="{% static 'home/img/img_bg_10.png' %}" class="ubea-card-item image-popup" title="DIPP">
 							<figure>
 								<div class="overlay"><i class="ti-plus"></i></div>
-								<img src="{% static 'home/img/img_bg_10.png' %}" alt="DPIIT" class="img-responsive">
+								<img src="{% static 'home/img/img_bg_10.png' %}" alt="DIPP" class="img-responsive">
 							</figure>
 						</a>
 					</div>
