--- a/dept/templates/dept/base.html
+++ b/dept/templates/dept/base.html
@@ -228,9 +228,9 @@
                 </form>
               </div>
             </li>
-            <div class="nav-item mx-1">
+            <!-- <div class="nav-item mx-1">
               <a class="nav-link" href="{% url 'download_ap' %}" target="_blank"><span class="text-primary">Download Action Points</span></a>
-            </div>
+            </div> -->
             <!-- Nav Item - Alerts 
             <li class="nav-item dropdown no-arrow mx-1">
               <a class="nav-link dropdown-toggle" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
