--- a/dipp/templates/dipp/add_meeting.html
+++ b/dipp/templates/dipp/add_meeting.html
@@ -20,7 +20,7 @@
           </div>
           <div class="form-group" >
               <label>Time of Meeting</label>
-              <input class="form-control" type="time" min=" name="m_time" required>
+              <input class="form-control" type="time" min="" name="m_time" required>
           </div>
           <div class="form-group" >
               <label>Meeting With whom</label>
