--- a/dipp/templates/dipp/home.html
+++ b/dipp/templates/dipp/home.html
@@ -45,18 +45,28 @@
                                                 <th>Department</th>
                                                 <th>Target Assigned</th>
                                                 <th>Target fulfilled</th>
-                                                <th>Achievements</th>
-                                                <th>Delay</th>
+                                                
+                                                <th>Description</th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             {% for i in m %}
                                             <tr class="odd gradeX">
+                                                <!----td>{{i.0}}</td-->
+                                                <!----td>{{i.1}}</td-->
                                                 <td>{{i.0}}</td>
-                                                <td>{{i.1}}</td>
-                                                <td>{{i.2}}</td>
-                                                <td>{{i.3}}</td>
-                                                <td>{{i.4}}</td>
+
+                                                <td>
+                                                    
+                                                    <ul>
+                                                        {% for i1 in i.1 %}
+                                                           <li>{{i1.status}}</li> 
+                                                        {% endfor %}        
+                                                    </ul>
+                                                </td>
+                                                
+                                                
+                                                <td>0</td>
                                             </tr>
                                             {% endfor %}
                                         </tbody>
