--- a/dipp/templates/dipp/view_comparision_analysis.html
+++ b/dipp/templates/dipp/view_comparision_analysis.html
@@ -20,6 +20,7 @@
       {% csrf_token %}
       <div class="form-group">
         <div class="row">
+          <div class="col-sm-2"></div>
           <div  class="form-group col-sm">
             <label>Department Name(First)</label>
             <select class="form-control" name="department1" style="width:60%">
@@ -42,9 +43,9 @@
       </div>
       <div class="row">
       
-  <div class="col-sm-4"></div>
+  <div class="col-sm-5"></div>
         <div class="col-sm-2">
-          <button type="submit" class="btn btn-primary" style="width: 85%" align>Compare</button>
+          <button type="submit" class="btn btn-primary" style="margin-left:15px;" align>Compare</button>
         </div>
       </div>
     </form>
