--- a/stk_hld/templates/stk_hld/home.html
+++ b/stk_hld/templates/stk_hld/home.html
@@ -3,123 +3,128 @@
 
 
 {% block content %}
-<!-- <div class="nav-item mx-1">
-    <a class="nav-link" href="{% url 'download_ap_dipp' %}" target="_blank"><span class="text-primary">Download Action Points</span></a>
-  </div> -->
+<div class="container">
+    <div class="row d-flex ">
 
-          <br>
+        <div class="col-lg-8">
+            <div class="card">
+            <div class="card-title d-flex justify-content-center ">
+                <h1 class="">Action Points</h1>
+            </div>
+            
+            {% for m,val,j,k in main %}
+            <div id="accordion" class="card-body card-outline-dark my-0 rah py-1">
+                <div class="card my-0 p-0">
+                    <div class="card-header my-0">
+                        <h5> {{val.action_no}} .
+                            <a href="{{j}}" data-parent="#accordion" data-toggle="collapse">
+                                {{val.action_name}}
+                            </a>
+                        </h5>
+                    </div>
 
-        <div class="container">
-            <div class="row d-flex ">
+                    <div id="{{k}}" class="collapse">
+                        <div class="card-body">
+                            <h4>Objective:</h4>
+                            <p class="card-text">{{val.action_objective}}</p>
+                            <h4>Description:</h4>
+                            <p class="card-text">{{val.action_description}}</p>
 
-                <div class="col-lg-8">
 
-                        <div class="d-flex justify-content-center">
-                                <h1 class="page-header">Action Points</h1>
+                            <p class="card-text">
+                                <h5>Targets assigned and achieved for this action point</h5>
+                            </p>
+
+
+                            <div class="card-body">
+                                <div class="table-responsive">
+                                    <table class="table table-striped table-bordered table-hover"
+                                        id="dataTables-example">
+                                        <thead>
+                                            <tr class="bg-gradient-primary text-white">
+                                                <th>Department</th>
+                                                <th>Target Assigned</th>
+                                                <th>Target fulfilled</th>
+                                                <th>Achievements</th>
+                                                <th>Delay</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {% for i in m %}
+                                            <tr class="odd gradeX">
+                                                <td>{{i.0}}</td>
+                                                <td>{{i.1}}</td>
+                                                <td>{{i.2}}</td>
+                                                <td>{{i.3}}</td>
+                                                <td>{{i.4}}</td>
+                                            </tr>
+                                            {% endfor %}
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
-            <br>
-         {% for m,val,j,k in main %}
-            <div id="accordion" class="rah">
-                <div class="card">
-                  <div class="card-header">
-                    <h5> {{val.action_no}} .  
-                      <a href="{{j}}" data-parent="#accordion" data-toggle="collapse">
-                        {{val.action_name}}
-                      </a>
-                    </h5>
-                  </div>
-          
-                  <div id="{{k}}" class="collapse">
-                    <div class="card-body">
-                        <h4>Objective:</h4>
-                        <p class="card-text">{{val.action_objective}}</p>
-                        <h4>Description:</h4>
-                        <p class="card-text" >{{val.action_description}}</p>
-                    
-                                
-                    <p class="card-text"><h5>Targets assigned and achieved for this action point</h5></p>
-                                
-                                
-                                <div class="card-body">
-                                    <div class="table-responsive">
-                                        <table class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                            <thead>
-                                                <tr class="bg-gradient-primary text-white">
-                                                  <th>Department</th>
-                                                  <th>Target Assigned</th>
-                                                  <th>Target fulfilled</th>
-                                                  <th>Achievements</th>
-                                                  <th>Delay</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                              {% for i in m %}
-                                                <tr class="odd gradeX">
-                                                      <td>{{i.0}}</td>
-                                                      <td>{{i.1}}</td>
-                                                      <td>{{i.2}}</td>
-                                                      <td>{{i.3}}</td>
-                                                      <td>{{i.4}}</td>
-                                                    </tr>
-                                                  {% endfor %}
-                                             </tbody>
-                                        </table>
-                                    </div>
-                                    </div>
-                                    </div>
-                                    </div>
-  
-                  </div>
-                </div>
+                        </div>
+                    </div>
 
-                {% endfor %}
-            
-            
+                </div>
+            </div>
+
+            {% endfor %}
+
+<div class="card-footer text-center"><span class="text-muted">Updated</span></div>
+        </div>
+    </div>
+
+
+        <!--notifications-->
+        <div class="col-lg-4">
+            <div class="card card-default mx-0 py-1">
+                <div class="card-heading d-flex justify-content-center">
+                    <h5> Top three Departments</h5>
+                </div>
+                <!-- /.card-heading -->
+                <div class="card-body p-0">
+                    <div class="list-group">
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered table-hover"
+                                    id="dataTables-example">
+                                    <thead>
+                                        <tr class="bg-gradient-primary text-white">
+                                            <th>Department</th>
+                                            <th>Score</th>
+                                            
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for i,j in l %}
+                                        <tr class="odd gradeX">
+                                            <td>{{i}}</td>
+                                            <td>{{j}}</td>
+                                            
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.list-group -->
+                    <!-- <a href="#" class="btn btn-default btn-block">View All Alerts</a> -->
+                </div>
+                <!-- /.card-body -->
+            </div>
+
+            <!-- end notificatioon-->
+
         </div>
 
+    </div>
 
-                      <!--notifications-->
-                      <div class="col-lg-4">
-                        <div class="card card-default">
-                            <div class="card-heading">
-                                <i class="fa fa-bell fa-fw"></i> Top three Departments
-                            </div>
-                            <!-- /.card-heading -->
-                            <div class="card-body">
-                                <div class="list-group">
-                                    <div class="card-body">
-                                        <div class="table-responsive">
-                                            <table class="table table-striped table-bordered table-hover"
-                                                id="dataTables-example">
-                                                <thead>
-                                                    <tr class="bg-gradient-primary text-white">
-                                                        <th>Department</th>
-                                                        <th>Score</th>
-                                                        
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    {% for i,j in l %}
-                                                    <tr class="odd gradeX">
-                                                        <td>{{i}}</td>
-                                                        <td>{{j}}</td>
-                                                        
-                                                    </tr>
-                                                    {% endfor %}
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- /.list-group -->
-                                <!-- <a href="#" class="btn btn-default btn-block">View All Alerts</a> -->
-                            </div>
-                            <!-- /.card-body -->
-                        </div>
 
-                      <!-- end notificatioon-->
 
-                    </div>
-                    </div>
 
-  {% endblock %}
+
+
+
+    {% endblock %}
