--- a/dipp/templates/dipp/base.html
+++ b/dipp/templates/dipp/base.html
@@ -217,7 +217,7 @@
             <!-- <h6 class="collapse-header">Login Screens:</h6> -->
             <a class="collapse-item" href="{% url 'view_target_analysis' %}">Target wise</a>
             <a class="collapse-item" href="{% url 'view_achievement_analysis' %}">Achievement/Delay wise</a>
-            <a class="collapse-item" href="{% url 'view_feedback_analysis' %}">Feedback wise</a>
+          <!--  <a class="collapse-item" href="{% url 'view_feedback_analysis' %}">Feedback wise</a>
             <div class="collapse-divider"></div>
             <!-- <h6 class="collapse-header">Other Pages:</h6> -->
             <a class="collapse-item" href="{% url 'view_ap_analysis' %}">ActionPoint wise</a>
