--- a/dept/templates/dept/base.html
+++ b/dept/templates/dept/base.html
@@ -80,13 +80,14 @@
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
           <i class="fas fa-fw fa-wrench"></i>
-          <span>Monitoring Committee</span>
+          <span>Monitoring Meeting</span>
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <!-- <h6 class="collapse-header">Custom Utilities:</h6> -->
             <div><a class="collapse-item block" href="{% url 'view_upcoming_monitoring_meetings_action_dept' %}" >Upcoming Meetings</a></div>
             <div><a class="collapse-item" href="{% url 'view_prev_monitoring_meeting' %}">Minutes of Meetings</a></div>
+            <a class="collapse-item" href="{% url 'dept_auto_monthly_minute' %}">View generated minute</a>
 
           </div>
         </div>
@@ -102,7 +103,6 @@
             <!-- <h6 class="collapse-header">Custom Utilities:</h6> -->
             <div><a class="collapse-item block" href="{% url 'view_upcoming_individual_meetings_action_dept' %}" >Individual Meetings</a></div>
             <div><a class="collapse-item" href="{% url 'view_prev_individual_meeting' %}">Minutes of Meetings</a></div>
-            <a class="collapse-item" href="{% url 'dept_auto_monthly_minute' %}">View generated minute</a>
           </div>
         </div>
       </li>
@@ -165,7 +165,7 @@
 <!--             <h6 class="collapse-header">Login Screens:</h6> -->
             <a class="collapse-item" href="{% url 'view_target_analysis_dept' %}">Target wise</a>
             <a class="collapse-item" href="{% url 'view_achievement_analysis_dept' %}">Achievement/Delay wise</a>
-            <a class="collapse-item" href="{% url 'view_feedback_analysis_dept' %}">Feedback wise</a>
+         <!--   <a class="collapse-item" href="{% url 'view_feedback_analysis_dept' %}">Feedback wise</a> -->
             <div class="collapse-divider"></div>
             <!-- <h6 class="collapse-header">Other Pages:</h6> -->
             <a class="collapse-item" href="{% url 'view_ap_analysis_dept' %}">ActionPoint wise</a>
