Revert "Merge branch 'dev' into atharva"
This reverts commit 96098eba415b7bb3a5c9b477f233f4fab92ad050

--- a/dipp/templates/dipp/action_ajax.html
+++ b/dipp/templates/dipp/action_ajax.html
@@ -1,5 +1,5 @@
 <!-- <option value="">---------</option> -->
 {% for a in a %}
 
-<option value="{{ a.actionpoint_no_id }}">{{ a.actionpoint_no_id}}. {{a.actionpoint_no.action_name }}</option>
+<option value="{{ a.actionpoint_no_id }}">{{ a.actionpoint_no_id }}</option>
 {% endfor %}
